- Fixed reading error setting position when not defined - Added break-word wrap for nodes with long names

--- a/src/Provider.css
+++ b/src/Provider.css
@@ -28,6 +28,7 @@
   .providerflow .reactflow-wrapper {
     flex-grow: 1;
     height: auto;
+    overflow-wrap: break-word;
   }
   
   .providerflow .selectall {
